--- a/src/scss/elements/_header.scss
+++ b/src/scss/elements/_header.scss
@@ -1,10 +1,16 @@
 header {
-  width: 100vw;
+  width: 100%;
   height: 5rem;
   background: $text-accent;
   display: flex;
   justify-content: center;
   align-items: center;
+  @media #{$media-tablet} {
+    height: 6rem;
+  }
+  @media #{$media-desktop} {
+    height: 8rem;
+  }
   
   h2 {
     font-size: 1.5rem;
@@ -13,9 +19,15 @@ header {
     padding: 0.2rem;
     font-family: $font-alt;
     letter-spacing: 0.1rem;
+    @media #{$media-tablet} {
+      font-size: 2.5rem;
+    }
+    @media #{$media-desktop} {
+      font-size: 2.5rem;
+    }
   }
   svg {
-    font-size: 3rem;
     color: $accent-color;
+    height: 100%;
   }
 }
