--- a/src/scss/elements/_content.scss
+++ b/src/scss/elements/_content.scss
@@ -10,7 +10,7 @@
   }
 
   h1 {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-family: $font-alt;
     color: $text-accent;
     text-transform: uppercase;
@@ -22,54 +22,125 @@
       font-size: 2rem;
     }
   }
-  form{
-    padding: 1rem;
+
+  form {
     width: 100%;
     height: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: center;
+    padding-top: 5%;
+    justify-content: flex-start;
     flex-direction: column;
+    align-items: center;
+    @media #{$media-desktop} {
+      align-items: flex-start;
+      justify-content: space-around;
+      flex-direction: row;
+      padding-top: 8%;
+    }
   }
 
   .basic__form {
-    .form__row {
-      display: flex;
-      flex-direction: column;
-      padding: 1.5rem 2rem;
-
-      label {
-        font-family: $font-alt;
-        color: $text-accent;
-        text-transform: uppercase;
-        font-size: 1.3rem;
-        letter-spacing: 0.05rem;
-        margin-bottom: 1rem;
-      }
-
-      input {
-        border: none;
-        border-bottom: 1px solid $text-color;
-      }
+    width: 80%;
+    @media #{$media-desktop} {
+      width: 40%;
     }
   }
 
-  button {
-    margin-top: 2rem;
-    padding: 1rem 3rem 1rem 3rem;
-    font-size: 1.3rem;
-    font-family: $font-alt;
-    color: $light-background;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    background: $text-accent;
-    border: none;
-    border-radius: 3rem;
-    @media #{$media-tablet} {
-      font-size: 1.5rem;
-    }
+  .extended__form {
+    width: 80%;
     @media #{$media-desktop} {
-      font-size: 1.6rem;
+      width: 40%;
+      display: flex;
+      flex-direction: column;
     }
+  }
+
+  .form__row {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem 0rem;
+    @media #{$media-desktop} {
+      padding: 1.5rem 2rem;
+    }
+
+    label {
+      font-family: $font-alt;
+      color: $text-accent;
+      text-transform: uppercase;
+      font-size: 1.2rem;
+      letter-spacing: 0.05rem;
+      margin-bottom: 1rem;
+      @media #{$media-tablet} {
+        font-size: 1.4rem;
+        margin-bottom: 2rem;
+      }
+      @media #{$media-desktop} {
+        font-size: 1.6rem;
+        letter-spacing: 0.1rem;
+        margin-bottom: 2rem;
+      }
+
+      span {
+        border: 1px solid $text-color;
+        color: $text-color;
+        font-weight: 500;
+        margin-left: 2rem;
+        font-family: $font-base;
+        font-size: 0.8rem;
+        padding: 0.2rem;
+        @media #{$media-desktop} {
+          font-size: 1rem;
+        }
+      }
+    }
+    div {
+      display: flex;
+      flex-direction: column;
+    input {
+      border: none;
+      border-bottom: 1px solid $text-color;
+      color: $text-color;
+
+      &:focus {
+        outline: none;
+      }
+
+      @media #{$media-desktop} {
+        font-size: 1.2rem;
+      }
+    }
+      span {
+        color: $text-accent;
+        font-weight: 600;
+      }
+    }
+  }
+}
+
+.buttons {
+  display: flex;
+}
+
+button {
+  margin: 1rem 0.5rem;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.2rem;
+  font-family: $font-alt;
+  color: $light-background;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  background: $text-accent;
+  border: none;
+  border-radius: 3rem;
+  cursor: pointer;
+  @media #{$media-tablet} {
+    font-size: 1.5rem;
+    margin-top: 3rem;
+  }
+  @media #{$media-desktop} {
+    font-size: 1.6rem;
+    margin-top: 3rem;
   }
 }
